--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -8,8 +8,9 @@
         <div class="row mt-10">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <ul class="search-tab">
+                    <li><a class="active" href="#">All</a class="active"></li>
                     <li><a href="#">Services</a></li>
-                    <li><a class="active" href="#">Products</a></li>
+                    <li><a href="#">Products</a></li>
                     <li><a href="#">Rentals</a></li>
                     <li><a href="#">Events</a></li>
                 </ul>
@@ -253,6 +254,13 @@
                             </div>
                         </div>
                     </slick>
+                </div>
+                <div class="row mt-20">
+                    <div class="col-lg-5 col-lg-3 col-md-3">
+                        <div class="card empty-card">
+                            <p>Advertisement for rental</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
