--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -249,3 +249,8 @@
         </div>
     </div>
 </div>
+
+<!-- loader -->
+<!-- <div class="loader">
+    <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
+</div> -->
