search page fixed

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -41,3 +41,6 @@
         </div>
     </nav>
 </header>
+<div class="loader" ng-if="formLoading">
+    <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
+</div> 
