--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -18,16 +18,12 @@
         </div>
         <div class="row mt-10 mb-10">
             <div class="col-lg-12 col-md-12">
-                <div class="topbar result">
+                <div class="topbar">
                     <div class="topbar-left">
-                        <span class="lefttext">Showing 1 to 6 of 1,372 Results.</span>
+                        <h2>Results for wedding</h2>
                     </div>
                     <div class="topbar-right">
-                        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Sort by <i class="fa fa-angle-down ml-10"></i></span>
-                        <ul class="dropdown-menu">
-                            <li><a>Dropdown link</a></li>
-                            <li><a>Dropdown link</a></li>
-                        </ul>
+                        <span>12 Results available</span>
                     </div>
                 </div>
             </div>
