--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -20,7 +20,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
-                        <h2>Results for wedding</h2>
+                        <h2>RESULTS FOR "wedding"</h2>
                     </div>
                     <div class="topbar-right">
                         <span>12 Results available</span>
