--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -1,4 +1,9 @@
-<header class="home-header" ng-class=" {'search-active' : stateurl == 'searchitems'}"> <!-- search-active class for search page -->
+<!-- Cookie pop -->
+<div class="cookie-header">
+    <p>We - and our partners - use cookies to deliver our services and to show you ads based on your interests. By using our website, you agree to the use of cookies as described in our Cookie Policy.</p>
+    <i class="fa fa-close"></i>
+</div>
+<header class="home-header" ng-class="{'search-active' : stateurl == 'searchitems'}"> <!-- search-active class for search page -->
     <nav class="navbar">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
