updates in top header, signin modal

--- a/angular/index.html
+++ b/angular/index.html
@@ -160,7 +160,7 @@
     <script src="js/modal-js/requestmodal.js"></script>
 </head>
 
-<body ng-controller="AppCtrl">
+<body ng-controller="AppCtrl" ng-class="{'cookie-active' : showheader}">
     <div class="app" ui-view></div>
 </body>
 
