--- a/angular/tpl/blocks/desktop/productpopover.html
+++ b/angular/tpl/blocks/desktop/productpopover.html
@@ -19,9 +19,9 @@
    <div class="col-md-6 col-sm-6 col-lg-6 nopadding ">
       <div class="titles">{{formData.title}} </div>
       <div class="description paddingtopbottom margintop">{{formData.description | cut:true:100:''}}</div>
-      <div class="price-box col-md-7 nopadding">
-         <span class="per_price"><span ng-if="formData.price > 0">$ </span>{{formData.price ? formData.price: 'Free'}}</span>
-         <span class="per_time" ng-if="formData.price > 0 && formData.type !='Shop'">Per {{formData.periodtype}}</span>
+      <div class="price-box">
+         <span class="per-price"><span ng-if="formData.price > 0">$ </span>{{formData.price ? formData.price: 'Free'}}</span>
+         <span class="per-time" ng-if="formData.price > 0 && formData.type !='Shop'">Per {{formData.periodtype}}</span>
       </div>
    </div>
    <div class="col-md-6 col-sm-6 col-lg-6 nopadding">
