--- a/angular/tpl/blocks/modals/popovermodal.html
+++ b/angular/tpl/blocks/modals/popovermodal.html
@@ -1,20 +1,18 @@
 <div class="custom-modal">
-   <div class="custom-slider">
-      <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverCarousel" class="slider-for">
-         <div class="imgcontainer" ng-repeat="(key,image) in popOverData.images" background-image="{{image.filetype == 1 ? ( IMGURL + image.file) : ''}}">
-            <span ng-if="image.filetype == 2">
-               <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')"></anguvideo>
-               <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')"></sound-cloud-player>
-            </span>
+   <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverCarousel" class="slider-for">
+      <div class="imgcontainer" ng-repeat="(key,image) in popOverData.images" background-image="{{image.filetype == 1 ? ( IMGURL + image.file) : ''}}">
+         <span ng-if="image.filetype == 2">
+            <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')"></anguvideo>
+            <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')"></sound-cloud-player>
+         </span>
+      </div>
+   </slick>
+   <div class="thumbslider">
+      <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverThumbCarousel" ng-if="!formLoading" class="slider-nav">
+         <div class="thumbholder" ng-repeat="(key,image) in popOverData.images" >
+            <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
          </div>
       </slick>
-      <div class="thumbslider">
-         <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverThumbCarousel" ng-if="!formLoading" class="slider-nav">
-            <div class="thumbholder" ng-repeat="(key,image) in popOverData.images" >
-               <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
-            </div>
-         </slick>
-      </div>
    </div>
    <div class="search-list-modal">
       <div class="row">
@@ -33,7 +31,7 @@
                   <div class="label-rank">Rank
                      Apprentice
                   </div>
-                  <div class="contentr"><img ng-src="{{ IMGURL + popOverData.owner.xprank.icon }}" class="rank-icon"/></div>
+                  <img ng-src="{{ IMGURL + popOverData.owner.xprank.icon }}" class="rank-icon"/>
                </div>               
             </div>
       </div>
@@ -77,3 +75,4 @@
   width: 40px;
 }
 </style>
+
