--- a/angular/tpl/blocks/popover/productpopover.html
+++ b/angular/tpl/blocks/popover/productpopover.html
@@ -43,7 +43,7 @@
             </div>
          </div>
          <div class="col-md-4 col-sm-4 col-lg-4 col-lg-offset-1 col-md-offset-1">
-            <a class="btn success-btn block-btn" ng-click="logintoProduct(popOverData.id);">LOGIN TO VIEW</a>
+            <a class="btn success-btn block-btn" ng-click="logintoProduct(popOverData);">LOGIN TO VIEW</a>
          </div>
       </div>
    </div>
