--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="img/services/1.jpg" />
+                            <img src="../assets/img/services/1.jpg" />
                             <div class="category-name">Services</div>
                         </div>
                         <div class="search-footer card-footer">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="img/services/2.jpg" />
+                            <img src="../assets/img/services/2.jpg" />
                             <div class="category-name">Products</div>
                         </div>
                         <div class="search-footer card-footer">
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="img/services/4.jpg" />
+                            <img src="../assets/img/services/4.jpg" />
                             <div class="category-name">Category</div>
                         </div>
                         <div class="search-footer card-footer">
@@ -280,7 +280,7 @@
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="img/services/3.jpg" />
+                            <img src="../assets/img/services/3.jpg" />
                             <div class="category-name">Category</div>
                         </div>
                         <div class="search-footer card-footer">
