--- a/angular/tpl/blocks/popover/productpopover.html
+++ b/angular/tpl/blocks/popover/productpopover.html
@@ -1,18 +1,20 @@
 <div class="custom-modal">
-   <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverCarousel" class="slider-for">
-      <div class="imgcontainer" ng-repeat="(key,image) in popOverData.images" background-image="{{image.filetype == 1 ? ( IMGURL + image.file) : ''}}">
-         <span ng-if="image.filetype == 2">
-            <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')"></anguvideo>
-            <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')"></sound-cloud-player>
-         </span>
-      </div>
-   </slick>
-   <div class="thumbslider">
-      <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverThumbCarousel" ng-if="!formLoading" class="slider-nav">
-         <div class="thumbholder" ng-repeat="(key,image) in popOverData.images" >
-            <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+   <div class="custom-slider">
+      <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverCarousel" class="slider-for">
+         <div class="imgcontainer" ng-repeat="(key,image) in popOverData.images" background-image="{{image.filetype == 1 ? ( IMGURL + image.file) : ''}}">
+            <span ng-if="image.filetype == 2">
+               <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')"></anguvideo>
+               <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')"></sound-cloud-player>
+            </span>
          </div>
       </slick>
+      <div class="thumbslider">
+         <slick data="popOverData.images" infinite="false" init-onload="true" settings="popOverThumbCarousel" ng-if="!formLoading" class="slider-nav">
+            <div class="thumbholder" ng-repeat="(key,image) in popOverData.images" >
+               <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+            </div>
+         </slick>
+      </div>
    </div>
    <div class="search-list-modal">
       <div class="row">
@@ -31,7 +33,7 @@
                   <div class="label-rank">Rank
                      Apprentice
                   </div>
-                  <img ng-src="{{ IMGURL + popOverData.owner.xprank.icon }}" class="rank-icon"/>
+                  <div class="contentr"><img ng-src="{{ IMGURL + popOverData.owner.xprank.icon }}" class="rank-icon"/></div>
                </div>               
             </div>
       </div>
@@ -49,7 +51,7 @@
    </div>
 </div>
 <style type="text/css">
-  .imgcontainer {
+  /* .imgcontainer {
     height: 365px;
     text-align: center;
     white-space: nowrap;
@@ -73,6 +75,6 @@
     border-radius: 5px;
 }.rank-icon{
   width: 40px;
-}
+} */
 </style>
 
