--- a/angular/tpl/desktop/searchitem.html
+++ b/angular/tpl/desktop/searchitem.html
@@ -338,7 +338,7 @@
         <div class="row mt-30" ng-if="activetab != 'all'">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-4">
                 <div class="row">
-                    <div class="col-lg-5 col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products[activetab]">
+                    <div class="col-lg-20 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products[activetab]">
                         <div class="card search-card" ng-if="!data.isdummy" ng-click="showItem(data)">
                             <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                             </div>
