--- a/angular/tpl/blocks/desktop/leftmenu.html
+++ b/angular/tpl/blocks/desktop/leftmenu.html
@@ -1,47 +1,33 @@
-<div class="leftcontainer" id="left-menu" ng-if="user.username">
-   <div class="corpcont">
-      <span class="texthead">MY TOTAL EARNING</span>
-      <!--<span class="textcontent">{{user.experiencepoints | currency}}</span>-->
-      <span class="textcontent">$80,890</span>
-   </div>
-   <div class="corpcontstatus">
-      <i class="fa fa-power-off gcolor" ng-class="{'offline-icon': !user.onlinestatus}"></i><span class='statusstext'>{{user.onlinestatus ? 'ONLINE ':'OFFLINE'}}</span>
-      <label class="switch" ng-class="{'offline': !user.onlinestatus}">
-      <input type="checkbox" ng-model="user.onlinestatus" ng-true-value="1" ng-false-value="0" ng-change="updatestatus(user.onlinestatus);">
-      <span class="slider round"></span>
-      </label>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.mydashboard"><span class="fa-icon"><i class="fa fa-dashboard"></i></span><span class=''> MY DASHBOARD</span></div>
-   </div>
-   <!-- <div class="corpcontmenu">
-      <div class="corpmenuitem"><i class="fa fa-heart"></i><span class=''> FAVOURITES</span></div>
-   </div> -->
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.wishlist"><span class="fa-icon"><i class="fa fa-list-alt"></i></span><span class=''> MY WISHLIST</span></div>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.projectlist"><span class="fa-icon"><i class="fa fa-list-ol"></i></span><span class=''> PROJECTS</span></div>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.myfriends"><span class="fa-icon"><i class="fa fa-user-plus"></i></span><span class=''> MY FRIENDS</span></div>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.feeds"><span class="fa-icon"><i class="fa  fa-th-list"></i></span><span class=''> FEEDS</span></div>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.howitworks"><span class="fa-icon"><i class="fa fa-lightbulb-o"></i></span><span class=''> HOW IT WORKS</span></div>
-   </div>
-   <div class="corpcontmenu">
-      <div class="corpmenuitem" ui-sref="app.rewardsandbenefits"><span class="fa-icon"><i class="fa fa-trophy"></i></span><span class=''> REWARDS & BENEFITS</span></div>
-   </div>
-   <!-- <div class="corpcontmenu" ui-sref="app.todos">
-      <div class="corpmenuitem"><span class="fa-icon"><i class="fa fa-tasks"></i></span><span class=''> TODO</span></div>
-   </div> -->
-   <div class="corpcontmenu">
-      <div class="corpmenuitem"><span class="fa-icon"><i class="fa fa-gear"></i></span><span class=''> SETTINGS</span></div>
-   </div>
-<!--    <div class="corpcontmenu">
-      <div class="corpmenuitem" ng-click="logout();"><i class="fa fa-reply"></i><span class=''> LOGOUT</span></div>
-   </div> -->
-</div>
+<div class="left-sidebar">
+            
+            <div class="sidebar-card">
+                <h6 class="label-xs">My Total Earning</h6>
+                <span class="font-price">$80,800</span>
+            </div>
+            
+            <label class="custom-toggle" for="switch-toggle">
+                <div class="toggle-con">
+                    <input
+                    type="checkbox"
+                    id="switch-toggle"
+                    />
+                    <span class="switch-tog"></span>
+                    <span class="toggle-s"></span>
+                    <i class="fa fa-power-off"></i>
+                    <span class="status"></span>
+                </div>
+            </label>
+
+            <!-- Simple list -->
+            <ul class="simple-list">
+                <li><a href="#"><i class="fa fa-dashboard"></i> <span>MY DASHBOARD</span></a></li>
+                <li><a href="#"><i class="fa fa-list-alt"></i> <span>MY WISHLIST</span></a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i> <span>MY PROJECTS</span></a></li>
+                <li><a href="#"><i class="fa fa-user-plus"></i> <span>MY FRIENDS</span></a></li>
+                <li><a href="#"><i class="fa fa-list-ul"></i> <span>MY FEEDS</span></a></li>
+                <li><a href="#"><i class="fa fa-lightbulb-o"></i> <span>HOW IT WORKS</span></a></li>
+                <li><a href="#"><i class="fa fa-trophy"></i> <span>REWARDS & BENEFITS</span></a></li>
+                <li><a href="#"><i class="fa fa-cogs"></i> <span>SETINGS</span></a></li>
+            </ul>
+
+        </div>
